tests/export_default/export_default.exp
Error: test.js:3
  3: N.x = M(N.x);
           ^^^^^^ string. This type is incompatible with
  3: N.x = M(N.x);
     ^^^ number

Error: test.js:3
  3: N.x = M(N.x);
             ^^^ number. This type is incompatible with the expected param type of
  2:     declare module.exports: (x: string) => string;
                                     ^^^^^^ string. See lib: lib/lib.js:2

Error: test.js:5
  5: N.y = P(N.y);
           ^^^^^^ string. This type is incompatible with
  5: N.y = P(N.y);
     ^^^ number

Error: test.js:5
  5: N.y = P(N.y);
             ^^^ number. This type is incompatible with the expected param type of
  2:     declare module.exports: (x: string) => string;
                                     ^^^^^^ string. See lib: lib/lib.js:2

Error: test.js:7
  7: N.z = Q(N.z);
           ^^^^^^ string. This type is incompatible with
  7: N.z = Q(N.z);
     ^^^ number

Error: test.js:7
  7: N.z = Q(N.z);
             ^^^ number. This type is incompatible with the expected param type of
  2:     declare module.exports: (x: string) => string;
                                     ^^^^^^ string. See lib: lib/lib.js:2


Found 6 errors
